[package]
name = "nimbuslink_server"
version = "0.1.0"
edition = "2021"


[profile.dev]
split-debuginfo = "unpacked"

[workspace]
members = ["libs/nimbus_common"]

[dependencies]
nimbus_common = { path = "libs/nimbus_common" }
# get local ip address
local-ip-address = "0.5.6"
# web socket
tungstenite = "0.20.1"
tokio-tungstenite = "0.20.1"

serde_derive = "1.0.192"
serde = "1.0.192"
serde_json = "1.0.108"
